--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/picker": "^1.8.1",
+    "@types/react-native-dotenv": "^0.2.0",
     "expo": "~42.0.1",
     "expo-location": "~12.1.2",
     "expo-status-bar": "~1.0.4",
@@ -21,6 +22,7 @@
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "react-native-dotenv": "^3.2.0",
     "typescript": "~4.0.0"
   },
   "private": true
